--- a/Privacy.html
+++ b/Privacy.html
@@ -1,6 +1,13 @@
-﻿@{
-    ViewData["Title"] = "Privacy Policy";
-}
-<h1>@ViewData["Title"]</h1>
-
-<p>Use this page to detail your site's privacy policy.</p>
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>GI-Amino - Privacy Policy</title>
+    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/4drzXZf/Primogem.webp">
+    <link rel="stylesheet" href="bootstrap.min.css" />
+    <link rel="stylesheet" href="site.css" asp-append-version="true" />
+</head>
+<body>
+    
+</body>
