--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GI-Amino - TA Event</title>
     <link rel="icon" type="image/x-icon" href="https://i.ibb.co/4drzXZf/Primogem.webp">
     <link rel="stylesheet" href="bootstrap.min.css" />
-    <link rel="stylesheet" href="VSMcarousel.css"/>
-    <link rel="stylesheet" href="VSM.css"/>
-    <link rel="stylesheet" href="wrapper.css"/>
+    <link rel="stylesheet" href="VSMcarousel.css" />
+    <link rel="stylesheet" href="VSM.css" />
+    <link rel="stylesheet" href="wrapper.css" />
     <link rel="stylesheet" href="site.css" asp-append-version="true" />
 </head>
+
 <body onload="CurrentSlide()">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Menu">
-                    <img id="Logo" src="https://i.ibb.co/27HWFzk/2465517595f5ea9f225d52ed73a4d0db.png" width="50" height="20" />
+                <a class="navbar-brand" href="index.html">
+                    <img id="Logo" src="https://i.ibb.co/27HWFzk/2465517595f5ea9f225d52ed73a4d0db.png" width="50"
+                        height="20" />
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Menu">Menu</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-light" href="Privacy.html">Privacy</a>
                         </li>
                     </ul>
                 </div>
@@ -37,18 +37,80 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
-            @RenderBody()
+            <!--Scriptapple A-->
+            <script src="carouselVSM.js"></script>
+            <script src="jquery.min.js"></script>
+            <script src="site.js" asp-append-version="true"></script>
+            <!--Scriptapple E-->
+
+            <!--Wrapper of the webiste A-->
+            <div class="wrapper">
+                <div class="wrappertitle">
+                    <h1 class="display-4">Welcome Traveler</h1>
+                </div>
+                <br />
+                <div class="wrapperhover">
+                    <img class="wrapperwm wrapperrotate" src="https://i.ibb.co/ZY5JhbP/R.png" />
+                </div>
+                <article class="wrappertxt wrapperstory">
+                    <!--A lot of text here and maybe some imgs as BG or inside-->
+                    "You and Paimon found a miraculous map on the ground.<br />
+                    After you touched it with your third wish, something<br />
+                    very strange appeared in Inazuma.<br />
+                    Go! Your friends in Inazuma need your help!"<br />
+                </article>
+                <br />
+                <article class="wrappertxt wrapperinfo">
+                    Welcome to this website for the Genshin Impact Event!<br />
+                    Here you can find the latest videos for the event and<br />
+                    here you can create your Adventure License from the<br />
+                    Adventure Guild in Inazuma!<br />
+                </article>
+            </div>
+            <!--Wrapper of the webiste E-->
+            <br />
+            <!--VSM of the website A-->
+            <div>
+                <h1 class="wrappertitle display-4">Videos & Social Media</h1>
+                <br />
+                <!--Videokarusell & Linkbuttons-->
+                <center>
+                    <div class="VSMcarousel">
+                        <button onclick="SlideToRight()" class="carousel_button carousel_button_right">
+                            <img src="https://i.ibb.co/zFp87r7/right-arrow.png" />
+                        </button>
+                        <button onclick="SlideToLeft()" class="carousel_button carousel_button_left">
+                            <img src="https://i.ibb.co/GkcVQsQ/left-arrow.png" />
+                        </button>
+                        <div class="carousel_track-container">
+                            <img id="VSM1" class="carousel_image carousel_imageright" src="" />
+                            <img id="VSM2" class="carousel_image carousel_imageleft" src="" />
+                            <iframe id="VSM0" class="carousel_video" src=""></iframe>
+                        </div>
+                    </div>
+                    <div class="social-media">
+                        <a href="https://youtube.com">
+                            <img class="social-media-link" src="https://i.ibb.co/K7TLzwF/youtube-PNG102354.png" />
+                        </a>
+                    </div>
+                </center>
+            </div>
+            <!--VSM of the website E-->
+            <br />
+            <!--AS of the website A-->
+            <div>
+                <h1 class="wrappertitle display-4">Adventure License</h1>
+                <br />
+                <!--AS Maker-->
+            </div>
+            <!--AS of the website E-->
         </main>
     </div>
 
     <footer class="border-top footer text-muted navbar-dark bg-dark">
         <div class="container">
-            &copy; 2023 - GI-Amino - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - GI-Amino - <a href="Privacy.html">Privacy</a>
         </div>
     </footer>
-    <script src="jquery.min.js"></script>
-    <script src="bootstrap.bundle.min.js"></script>
-    <script src="site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
