--- a/Privacy.html
+++ b/Privacy.html
@@ -1,11 +1,10 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GI-Amino - Privacy Policy</title>
     <link rel="icon" type="image/x-icon" href="https://i.ibb.co/4drzXZf/Primogem.webp">
-    <link rel="stylesheet" href="bootstrap.min.css" />
 </head>
 <body>
     
