--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="mainhtml" lang="de">
 
-<head>
+<head onload="GetWH()">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GI-Amino - TA Event</title>
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="site.css" asp-append-version="true" />
 </head>
 
-<body onload="CurrentSlide()" onload="GetWH()">
+<body onload="CurrentSlide()">
     <header>
         <nav>
             <a href="Privacy.html">
