--- a/index.html
+++ b/index.html
@@ -88,8 +88,11 @@
     </div>
     <!--AS of the website E-->
 
-    <footer>
-        &copy; 2023 - GI-Amino - <a href="Privacy.html">Privacy</a>
-    </footer>
+    
 </body>
+
+<footer class="footer">
+    &copy; 2023 - GI-Amino - <a href="Privacy.html">Privacy</a>
+</footer>
+
 </html>
