Wrappertxt and Wrappertitle
Both now fixed for mobile!

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="mainhtml" lang="de">
 
-<head onload="GetWH()">
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GI-Amino - TA Event</title>
@@ -29,7 +29,7 @@
     <!--Wrapper of the webiste A-->
     <div class="wrapper">
         <div class="wrappertitle">
-            <h1 class="display-4">Welcome Traveler</h1>
+            <h1>Welcome Traveler</h1>
         </div>
         <div class="wrapperhover">
             <img class="wrapperwm wrapperrotate" src="https://i.ibb.co/ZY5JhbP/R.png" />
