--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="VSMcarousel.css" />
     <link rel="stylesheet" href="VSM.css" />
     <link rel="stylesheet" href="wrapper.css" />
+    <link rel="stylesheet" href="AS.css"/>
     <link rel="stylesheet" href="site.css" asp-append-version="true" />
 </head>
 
 <header>
     <nav class="navbar">
         <a href="index.html">
-            <img class="navbarimg" src="https://i.ibb.co/27HWFzk/2465517595f5ea9f225d52ed73a4d0db.png"/>
+            <img class="navbarimg" src="https://i.ibb.co/27HWFzk/2465517595f5ea9f225d52ed73a4d0db.png" />
         </a>
     </nav>
 </header>
@@ -52,12 +53,14 @@
     <!--Wrapper of the webiste E-->
     <br />
     <!--VSM of the website A-->
-    <div>
-        <h1 class="wrappertitle display-4">Videos & Social Media</h1>
+    <div class="VSM">
+        <div class="VSMtitle">
+            <h1>Videos & Social Media</h1>
+        </div>
         <br />
         <!--Videokarusell & Linkbuttons-->
         <center>
-            <div class="VSMcarousel">
+            <div>
                 <button onclick="SlideToRight()" class="carousel_button carousel_button_right">
                     <img src="https://i.ibb.co/zFp87r7/right-arrow.png" />
                 </button>
@@ -80,14 +83,16 @@
     <!--VSM of the website E-->
     <br />
     <!--AS of the website A-->
-    <div>
-        <h1 class="wrappertitle display-4">Adventure License</h1>
+    <div class="AS">
+        <div class="AStitle">
+            <h1>Adventure License</h1>
+        </div>
         <br />
         <!--AS Maker-->
     </div>
     <!--AS of the website E-->
 
-    
+
 </body>
 
 <footer class="footer">
