New Folder structure

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GI-Amino - TA Event</title>
     <link rel="icon" type="image/x-icon" href="https://i.ibb.co/4drzXZf/Primogem.webp">
-    <link rel="stylesheet" href="VSMcarousel.css" />
-    <link rel="stylesheet" href="VSM.css" />
-    <link rel="stylesheet" href="wrapper.css" />
-    <link rel="stylesheet" href="AS.css"/>
-    <link rel="stylesheet" href="site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="css/VSM.css" />
+    <link rel="stylesheet" href="css/AS.css" />
+    <link rel="stylesheet" href="css/wrapper.css" />
+    <link rel="stylesheet" href="css/VSMcarousel.css" />
+    <link rel="stylesheet" href="css/site.css" />
 </head>
 
 <header>
@@ -23,8 +23,7 @@
 
 <body onload="CurrentSlide()">
     <!--Scriptapple A-->
-    <script src="carouselVSM.js"></script>
-    <script src="jquery.min.js"></script>
+    <script src="js/carouselVSM.js"></script>
     <!--Scriptapple E-->
 
     <!--Wrapper of the webiste A-->
